--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
         
         function App() {
             return (
-                <h1 className='text-4xl font-bold'>oi pessoal!</h1>
+                <React.Fragment>
+                    <h1 className='text-4xl font-bold'>oi pessoal!</h1>
+                    <DrumButton name={'Q'} url={'https://s3.amazonaws.com/freecodecamp/drums/Heater-1.mp3'}/>
+                </React.Fragment>
+            )
+        }
+
+        function DrumButton(props) {
+            function playMP3() {
+                new Audio(props.url).play()
+            }
+            return (
+                <button onClick={playMP3}
+                        className='h-12 w-12 bg-gray-200'
+                >{props.name}</button>
             )
         }
         
