added links for guitar kit

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <React.Fragment>
                     <div id="container">
                         <DrumButton name='Q' url='https://s3.amazonaws.com/freecodecamp/drums/Heater-1.mp3'/>
+                        <DrumButton name='W' url='https://sampleswap.org/samples-ghost/INSTRUMENTS%20(SINGLE%20SAMPLES)/Guitars/58[kb]bellguitar1.wav.mp3'/>
+                        <DrumButton name='E' url='https://sampleswap.org/samples-ghost/INSTRUMENTS%20(SINGLE%20SAMPLES)/Guitars/138[kb]freaky-guitar-burstbend.wav.mp3'/>
                     </div>
                 </React.Fragment>
             )
@@ -53,7 +55,5 @@
 </head>
 <body>
     <div id="root"></div>
-
-
 </body>
 </html>
