--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drum Machine</title>
-
+    <style>
+        .aniamete-key {
+            transform: translateY(0.5rem);
+            box-shadow: 0 0px 0 0 rgba(27, 111, 248, 1), 0 0px 0 0 rgba(27, 112, 248, 0.25) !important;
+            border-bottom: 0px;
+        }
+    </style>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
@@ -39,7 +45,6 @@
             
             function playMP3() {
                 var audio = event.target.querySelector('audio')
-                console.log(audio)
                 audio.currentTime = 0 //to attend fast mouse clicks
                 audio.volume = volume;
                 if ( power) {
@@ -55,11 +60,17 @@
                 if (bank === 'guitar') {
                     audio = new Audio(soundToPlay.secondBankUrl);
                 }
-                var x = document.getElementById(event.key.toUpperCase()).parentElement.parentElement
-  
+                audio.volume = volume;
+                var buttonPressed = document.getElementById(event.key.toUpperCase()).parentElement.parentElement;
+
                 if (power) {
-                    // audio.play()
-                    x.click()
+                    audio.play()
+
+                    //animation for key press
+                    buttonPressed.classList.add('aniamete-key')
+                    setTimeout(() => {
+                        buttonPressed.classList.remove('aniamete-key')
+                    }, 100)
                 } 
             }
 
@@ -99,7 +110,7 @@
 
             return (
                 <button onClick={() => props.playMP3()}
-                        className='drum-pad focus:outline-none w-16 h-16 bg-indigo-600 rounded-lg cursor-pointer select-none active:translate-y-2  active:[box-shadow:0_0px_0_0_#1b6ff8,0_0px_0_0_#1b70f841]
+                        className='drum-pad focus:outline-none w-16 h-16 bg-indigo-600 rounded-lg cursor-pointer select-none active:translate-y-2 active:[box-shadow:0_0px_0_0_#1b6ff8,0_0px_0_0_#1b70f841]
     active:border-b-[0px] transition-all duration-50 [box-shadow:0_6px_0_0_#22c55e,0_15px_0_0_#1b70f841] border-b-[1px] border-indigo-300'
                         id='drum-pad'
                 >
